# stack-radar

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: __main__.py  cli.py  config.py  main.py  run.py
backend/core/: database.py  exceptions.py  pagination.py  security.py  utils.py
backend/migrations/: 0001_init_schema.down.sql  0001_init_schema.up.sql
backend/routers/: admin.py  auth.py  dashboard.py  projects.py  teams.py  technologies.py
backend/schemas/: __init__.py  auth.py  projects.py  teams.py  technologies.py
backend/services/: auth.py  dashboard.py  projects.py  teams.py  technologies.py
dockerfiles/: backend.Dockerfile  frontend.Dockerfile  nginx.Dockerfile
etc/: nginx.conf
frontend/: Dockerfile  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AccountMenu.tsx  RequireAuth.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/ui/: checkbox.tsx  dropdown-menu.tsx  multi-select.tsx  pagination.tsx  progress.tsx  select.tsx  sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/features/admin/components/: ArchiveManager.tsx
frontend/src/features/admin/hooks/: useAdmin.ts
frontend/src/features/dashboard/components/: CategoryBreakdown.tsx  OverviewCards.tsx  ProjectStatusChart.tsx  RecentProjects.tsx  (+2 more)
frontend/src/lib/: utils.ts
frontend/src/pages/: Admin.tsx  Home.tsx  Login.tsx  Projects.tsx  Teams.tsx  Technologies.tsx  Users.tsx
(+25 files in other folders)
