[project]
name = "stack-radar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=3.2.0,<4.0.0",
    "fastapi>=0.121.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn[standart]>=0.38.0",
]
